[gd_scene load_steps=11 format=3 uid="uid://d4mlv7l1yrpco"]

[ext_resource type="Script" path="res://logic/StatedCard.gd" id="1_8off8"]
[ext_resource type="Texture2D" uid="uid://cdg4mwrpolh6q" path="res://graphics/KSIAZKA.png" id="2_3fn57"]
[ext_resource type="Texture2D" uid="uid://ded20bet3dhed" path="res://graphics/ZAROWKA.png" id="3_nd12q"]
[ext_resource type="Texture2D" uid="uid://byulcsa5c0m6o" path="res://graphics/MIECZ.png" id="4_6exss"]
[ext_resource type="StyleBox" uid="uid://bsuji6wg3ernk" path="res://themes/StatBox.tres" id="5_yly75"]
[ext_resource type="FontFile" uid="uid://j1cr6vj06n8t" path="res://EdoPL.ttf" id="6_glmh8"]
[ext_resource type="Texture2D" uid="uid://l8a7yea5p3kq" path="res://images/FancySeparator.bmp" id="7_q8sw5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mhw1g"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lp6yn"]
bg_color = Color(0.447059, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 0)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vd33y"]

[node name="StatedCard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8off8")
first_stat_icon = ExtResource("2_3fn57")
second_stat_icon = ExtResource("4_6exss")
third_stat_icon = ExtResource("3_nd12q")
first_stat_value = "12"
second_stat_value = "12"
third_stat_value = "12"
card_name = "nazwa"
card_flavour = "flavor"
card_text = "opis"
center_text = false

[node name="ColorBackground" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="PanelText" type="Panel" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 436.0
offset_right = 369.0
offset_bottom = 710.0
theme_override_styles/panel = SubResource("StyleBoxFlat_mhw1g")

[node name="PanelStats1" type="Panel" parent="."]
layout_mode = 0
offset_left = 378.0
offset_top = 32.0
offset_right = 480.0
offset_bottom = 232.0
theme_override_styles/panel = SubResource("StyleBoxFlat_lp6yn")

[node name="PanelStats2" type="Panel" parent="."]
layout_mode = 0
offset_left = 378.0
offset_top = 253.0
offset_right = 480.0
offset_bottom = 453.0
theme_override_styles/panel = SubResource("StyleBoxFlat_lp6yn")

[node name="PanelStats3" type="Panel" parent="."]
layout_mode = 0
offset_left = 378.0
offset_top = 474.0
offset_right = 480.0
offset_bottom = 674.0
theme_override_styles/panel = SubResource("StyleBoxFlat_lp6yn")

[node name="Image" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 380.0
offset_bottom = 427.0
expand_mode = 1
stretch_mode = 6

[node name="Name" type="RichTextLabel" parent="."]
layout_mode = 0
offset_top = 440.0
offset_right = 380.0
offset_bottom = 496.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("6_glmh8")
theme_override_fonts/italics_font = ExtResource("6_glmh8")
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "[center]nazwa[/center]"
scroll_active = false
shortcut_keys_enabled = false

[node name="Flavour" type="RichTextLabel" parent="."]
layout_mode = 0
offset_top = 495.0
offset_right = 378.0
offset_bottom = 519.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("6_glmh8")
theme_override_fonts/italics_font = ExtResource("6_glmh8")
theme_override_font_sizes/normal_font_size = 0
theme_override_font_sizes/italics_font_size = 20
bbcode_enabled = true
text = "[center][i]flavor[/i][/center]"
scroll_active = false
shortcut_keys_enabled = false

[node name="Separator" type="TextureRect" parent="."]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 18.0
offset_top = 511.0
offset_right = 359.0
offset_bottom = 545.0
scale = Vector2(1.00143, 1)
texture = ExtResource("7_q8sw5")
expand_mode = 1
stretch_mode = 5

[node name="CardText" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 23.0
offset_top = 539.0
offset_right = 358.0
offset_bottom = 706.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("6_glmh8")
theme_override_fonts/italics_font = ExtResource("6_glmh8")
theme_override_font_sizes/normal_font_size = 26
theme_override_font_sizes/italics_font_size = 12
bbcode_enabled = true
text = "[center]opis[/center]"
scroll_active = false
shortcut_keys_enabled = false

[node name="Stats" type="VBoxContainer" parent="."]
layout_mode = 1
offset_left = 391.0
offset_top = -1.0
offset_right = 471.0
offset_bottom = 718.0
theme_override_constants/separation = 50
alignment = 1

[node name="VSeparator" type="VSeparator" parent="Stats"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_vd33y")

[node name="Stat1" type="VBoxContainer" parent="Stats"]
layout_mode = 2
size_flags_vertical = 6

[node name="Value" type="RichTextLabel" parent="Stats/Stat1"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = ExtResource("6_glmh8")
theme_override_fonts/italics_font = ExtResource("6_glmh8")
theme_override_font_sizes/normal_font_size = 42
bbcode_enabled = true
text = "[center]12[/center]"
scroll_active = false

[node name="Panel" type="Panel" parent="Stats/Stat1"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 6
theme_override_styles/panel = ExtResource("5_yly75")

[node name="Icon" type="TextureRect" parent="Stats/Stat1/Panel"]
layout_mode = 0
offset_right = 80.0
offset_bottom = 80.0
texture = ExtResource("2_3fn57")
expand_mode = 1

[node name="Stat2" type="VBoxContainer" parent="Stats"]
layout_mode = 2
size_flags_vertical = 6

[node name="Value" type="RichTextLabel" parent="Stats/Stat2"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = ExtResource("6_glmh8")
theme_override_fonts/italics_font = ExtResource("6_glmh8")
theme_override_font_sizes/normal_font_size = 42
bbcode_enabled = true
text = "[center]12[/center]"
scroll_active = false

[node name="Panel" type="Panel" parent="Stats/Stat2"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 6
theme_override_styles/panel = ExtResource("5_yly75")

[node name="Icon" type="TextureRect" parent="Stats/Stat2/Panel"]
layout_mode = 0
offset_left = 7.0
offset_top = 7.0
offset_right = 79.0
offset_bottom = 76.0
texture = ExtResource("4_6exss")
expand_mode = 1
stretch_mode = 4

[node name="Stat3" type="VBoxContainer" parent="Stats"]
layout_mode = 2
size_flags_vertical = 6

[node name="Value" type="RichTextLabel" parent="Stats/Stat3"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = ExtResource("6_glmh8")
theme_override_fonts/italics_font = ExtResource("6_glmh8")
theme_override_font_sizes/normal_font_size = 42
bbcode_enabled = true
text = "[center]12[/center]"
scroll_active = false

[node name="Panel" type="Panel" parent="Stats/Stat3"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 6
theme_override_styles/panel = ExtResource("5_yly75")

[node name="Icon" type="TextureRect" parent="Stats/Stat3/Panel"]
layout_mode = 0
offset_right = 80.0
offset_bottom = 80.0
texture = ExtResource("3_nd12q")
expand_mode = 1

[node name="VSeparator2" type="VSeparator" parent="Stats"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_vd33y")
